Criando tabela; criando listas de tokens validados; validação de token digitado; favicon alterado; adicionado plugin vue-toasted

--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
+    "vue-toasted": "^1.1.27",
     "vuetify": "^2.1.0"
   },
   "devDependencies": {
